--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,19 +14,19 @@ export(
        summary.glh.test
 )
 
-S3method(ci, default)
+S3method(ci, numeric)
 S3method(ci, binom)
 S3method(ci, lm)
 S3method(ci, lme)
-S3method(ci, mer)
+##S3method(ci, mer)
 S3method(ci, estimable)
 
 S3method(fit.contrast, lm)
 S3method(fit.contrast, lme)
-S3method(fit.contrast, mer)
+##S3method(fit.contrast, mer)
 
 S3method(estimable, default)
-S3method(estimable, mer)
+##S3method(estimable, mer)
 S3method(estimable, mlm)
 
 S3method(print, glh.test)
