Changs to squash new R CMD check warnings

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: gmodels
 Version: 2.16.1
 Date: 2015-07-18
-Title: Various R programming tools for model fitting
+Title: Various R Programming Tools for Model Fitting
 Author: Gregory R. Warnes, Ben Bolker, Thomas Lumley, and Randall C
         Johnson. Contributions from Randall C. Johnson are Copyright
         (2005) SAIC-Frederick, Inc. Funded by the Intramural Research
