--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,3 +35,17 @@ S3method(summary, glh.test)
 importFrom(MASS, ginv)
 importFrom(gdata, frameApply)
 importFrom(gdata, nobs)
+
+importFrom(stats, "chisq.test")
+importFrom(stats, "coef")
+importFrom(stats, "family")
+importFrom(stats, "fisher.test")
+importFrom(stats, "mcnemar.test")
+importFrom(stats, "pchisq")
+importFrom(stats, "pf")
+importFrom(stats, "pt")
+importFrom(stats, "qbeta")
+importFrom(stats, "qt")
+importFrom(stats, "sd")
+importFrom(stats, "summary.glm")
+importFrom(stats, "summary.lm")
