--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: gmodels
-Version: 2.16.2
-Date: 2015-07-21
-Title: Various R Programming Tools for Model Fitting
+Version: 2.16.0
+Date: 2014-07-24
+Title: Various R programming tools for model fitting
 Author: Gregory R. Warnes, Ben Bolker, Thomas Lumley, and Randall C
         Johnson. Contributions from Randall C. Johnson are Copyright
         (2005) SAIC-Frederick, Inc. Funded by the Intramural Research
         Program, of the NIH, National Cancer Institute, Center for
         Cancer Research under NCI Contract NO1-CO-12400.
 Maintainer: Gregory R. Warnes <greg@warnes.net>
-Description: Various R programming tools for model fitting.
+Description: Various R programming tools for model fitting
 Depends: R (>= 1.9.0)
 Suggests: gplots, gtools, Matrix, nlme, lme4 (>= 0.999999-0)
 Imports: MASS, gdata
